feat(backend): add peaceful logic