@@ -1,25 +1,21 @@
 package dev.mygame.domain.session;
 
 import dev.mygame.dto.websocket.response.AbilityCooldownDto;
-import dev.mygame.dto.websocket.response.event.CombatNextTurnEvent;
-import dev.mygame.dto.websocket.response.event.CombatParticipantsJoinedEvent;
-import dev.mygame.dto.websocket.response.event.EntityTurnEndedEvent;
+import dev.mygame.dto.websocket.event.CombatNextTurnEvent;
+import dev.mygame.dto.websocket.event.CombatParticipantsJoinedEvent;
+import dev.mygame.dto.websocket.event.EntityTurnEndedEvent;
 import dev.mygame.enums.CombatOutcome;
 import dev.mygame.enums.EntityStateType;
 import dev.mygame.domain.event.CombatEndListener;
 import dev.mygame.domain.event.DeathListener;
 import dev.mygame.domain.model.Entity;
 import dev.mygame.domain.model.Monster;
-import dev.mygame.domain.model.Player;
 import dev.mygame.service.AIService;
 import lombok.AllArgsConstructor;
-import lombok.Builder;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Component;
 
 import java.util.*;
 import java.util.concurrent.TimeUnit;
@@ -39,37 +35,29 @@ public class CombatInstance implements DeathListener {
 
     private List<String> turnOrder = new ArrayList<>();
     private int currentTurnIndex = -1;
-    private String currentTurnEntityId;
+    private boolean isFinished = false;
 
     private Set<String> hasTakenFirstTurn = new HashSet<>();
 
     private List<CombatEndListener> endListeners = new ArrayList<>();
 
-    private boolean isFinished = false;
-
     private static final Logger log = LoggerFactory.getLogger(CombatInstance.class);
 
-    public CombatInstance(String combatId, GameSession gameSession,
-                          List<Entity> initialParticipants, Entity initiator, AIService aiService) {
-        this.combatId = combatId;
-        this.gameSession = gameSession;
-        this.aiService = aiService;
-
-        initializeTeamsAndListeners(initialParticipants);
-        //initializeTurnOrder(initiator);
-        initializeTurnOrder();
-
-        startNextTurn();
-    }
+//    public CombatInstance(String combatId, GameSession gameSession, List<Entity> initialParticipants, Entity initiator, AIService aiService) {
+//        this.combatId = combatId;
+//        this.gameSession = gameSession;
+//        this.aiService = aiService;
+//        initializeTeamsAndListeners(initialParticipants);
+//        initializeTurnOrder(initiator);
+//        startNextTurn();
+//    }
 
     public CombatInstance(String combatId, GameSession gameSession, List<Entity> initialParticipants, AIService aiService) {
         this.combatId = combatId;
         this.gameSession = gameSession;
         this.aiService = aiService;
-
         initializeTeamsAndListeners(initialParticipants);
         initializeTurnOrder();
-
         startNextTurn();
     }
 
@@ -114,105 +102,169 @@ public class CombatInstance implements DeathListener {
      * Инициатор ставится первым, остальные сортируются по инициативе.
      */
 
-    private void initializeTurnOrder(Entity initiator) {
-        List<Entity> otherParticipants = new ArrayList<>();
-        this.teams.values().forEach(team ->
-                team.stream()
-                        .filter(Entity::isAlive)
-                        .filter(entity -> !entity.getId().equals(initiator.getId()))
-                        .forEach(otherParticipants::add)
-        );
+//    private void initializeTurnOrder(Entity initiator) {
+//        List<Entity> otherParticipants = new ArrayList<>();
+//        this.teams.values().forEach(team ->
+//                team.stream()
+//                        .filter(Entity::isAlive)
+//                        .filter(entity -> !entity.getId().equals(initiator.getId()))
+//                        .forEach(otherParticipants::add)
+//        );
+//
+//        otherParticipants.sort(
+//                Comparator.comparingInt(Entity::getInitiative).reversed()
+//                        .thenComparing(Entity::getId)
+//        );
+//
+//        this.turnOrder.clear();
+//        this.turnOrder.add(initiator.getId());
+//        otherParticipants.forEach(entity -> this.turnOrder.add(entity.getId()));
+//
+//        this.currentTurnIndex = 0;
+//
+//        log.info("--- [INITIATOR-BASED SORT] Final turn order: {}", this.turnOrder);
+//    }
 
-        otherParticipants.sort(
-                Comparator.comparingInt(Entity::getInitiative).reversed()
-                        .thenComparing(Entity::getId)
-        );
-
-        this.turnOrder.clear();
-        this.turnOrder.add(initiator.getId());
-        otherParticipants.forEach(entity -> this.turnOrder.add(entity.getId()));
-
-        this.currentTurnIndex = 0;
-
-        log.info("--- [INITIATOR-BASED SORT] Final turn order: {}", this.turnOrder);
-    }
+//    private void startNextTurn() {
+//        printState("At start of startNextTurn");
+//        if (this.currentTurnIndex != -1) {
+//            this.currentTurnIndex++;
+//        } else {
+//            this.currentTurnIndex = 0;
+//        }
+//
+//        if (currentTurnIndex >= this.turnOrder.size()) {
+//            initializeTurnOrder();
+//            this.currentTurnIndex = 0;
+//        }
+//
+//        if (this.turnOrder.isEmpty()) {
+//            endCombatForAll();
+//            return;
+//        }
+//
+//        String currentEntityId = getCurrentTurnEntityId();
+//        Entity nextEntity = this.gameSession.getEntities().get(currentEntityId);
+//
+//        if (nextEntity == null || !nextEntity.isAlive()) {
+//            startNextTurn();
+//            return;
+//        }
+//        nextEntity.reduceAllCooldowns();
+//
+//        if (hasTakenFirstTurn.contains(currentEntityId)) {
+//            int restoredAP = Math.min(
+//                    nextEntity.getCurrentAP() + gameSession.getStandartEntityGameSettings().getDefaultEntityCurrentAp(),
+//                    nextEntity.getMaxAP()
+//            );
+//            nextEntity.setCurrentAP(restoredAP);
+//        } else {
+//            final int startingAP = gameSession.getStandartEntityGameSettings().getDefaultEntityCurrentAp();
+//            nextEntity.setCurrentAP(startingAP);
+//            hasTakenFirstTurn.add(currentEntityId);
+//        }
+//        List<AbilityCooldownDto> currentAbilityCooldowns = nextEntity.getAbilities().stream()
+//                .map(abilityInstance -> AbilityCooldownDto.builder()
+//                        .turnCooldown(abilityInstance.getTurnCooldown())
+//                        .cooldownEndTime(abilityInstance.getCooldownEndTime())
+//                        .abilityTemplateId(abilityInstance.getTemplate().getTemplateId())
+//                        .build())
+//                .toList();
+//
+//
+//        CombatNextTurnEvent nextTurnEvent = CombatNextTurnEvent.builder()
+//                .combatId(this.combatId)
+//                .currentTurnEntityId(getCurrentTurnEntityId())
+//                .currentAP(nextEntity.getCurrentAP())
+//                .abilityCooldowns(currentAbilityCooldowns)
+//                .build();
+//        this.gameSession.publishUpdate("combat_next_turn", nextTurnEvent);
+//
+//        if (nextEntity instanceof Monster) {
+//            gameSession.getScheduler().schedule(() -> {
+//                aiService.executeMonsterTurn((Monster) nextEntity, this.gameSession);
+//            }, 1, TimeUnit.SECONDS);
+//        } else {
+//        }
+//        printState("After selecting next entity in startNextTurn");
+//    }
 
     private void startNextTurn() {
-        if (this.currentTurnIndex != -1) {
-            this.currentTurnIndex++;
-        } else {
-            this.currentTurnIndex = 0;
+        if (isFinished) return;
+
+        // Ищем следующего ЖИВОГО участника
+        for (int i = 0; i < turnOrder.size() + 1; i++) { // Защита от бесконечного цикла
+            currentTurnIndex++;
+
+            // Если раунд закончился, начинаем новый
+            if (currentTurnIndex >= turnOrder.size()) {
+                initializeTurnOrder(); // Пересобираем очередь из живых
+                currentTurnIndex = 0;
+            }
+
+            if (turnOrder.isEmpty()) {
+                endCombatForAll();
+                return;
+            }
+
+            Entity nextEntity = gameSession.getEntities().get(getCurrentTurnEntityId());
+            if (nextEntity != null && nextEntity.isAlive()) {
+                // Нашли! Запускаем его ход.
+                beginTurnFor(nextEntity);
+                return;
+            }
         }
 
-//        this.teams.values().stream()
-//                .flatMap(Collection::stream)
-//                .forEach(Entity::reduceAllCooldowns);
+        // Если после полного круга не нашли живых - бой окончен
+        log.warn("No alive entities found in turn order. Ending combat.");
+        endCombatForAll();
+    }
 
-        if (currentTurnIndex >= this.turnOrder.size()) {
-            initializeTurnOrder();
-            this.currentTurnIndex = 0;
-        }
+    private void beginTurnFor(Entity entity) {
+        int currentAp = Math.min(
+                entity.getCurrentAP() + gameSession.getStandartEntityGameSettings().getDefaultEntityCurrentAp(),
+                entity.getMaxAP()
+        );
+        entity.setCurrentAP(currentAp);
+        entity.reduceAllCooldowns();
 
-        if (this.turnOrder.isEmpty()) {
-            endCombatForAll();
-            return;
-        }
-
-        String currentEntityId = getCurrentTurnEntityId();
-        Entity nextEntity = this.gameSession.getEntities().get(currentEntityId);
-
-        if (nextEntity == null || !nextEntity.isAlive()) {
-            startNextTurn();
-            return;
-        }
-        nextEntity.reduceAllCooldowns();
-
-        if (hasTakenFirstTurn.contains(currentEntityId)) {
-            int restoredAP = Math.min(
-                    nextEntity.getCurrentAP() + gameSession.getGameSettings().getDefaultEntityCurrentAp(),
-                    nextEntity.getMaxAP()
-            );
-            nextEntity.setCurrentAP(restoredAP);
-        } else {
-            final int startingAP = gameSession.getGameSettings().getDefaultEntityCurrentAp();
-            nextEntity.setCurrentAP(startingAP);
-            hasTakenFirstTurn.add(currentEntityId);
-        }
-        List<AbilityCooldownDto> currentAbilityCooldowns = nextEntity.getAbilities().stream()
-                .map(abilityInstance -> AbilityCooldownDto.builder()
-                        .turnCooldown(abilityInstance.getTurnCooldown())
-                        .cooldownEndTime(abilityInstance.getCooldownEndTime())
-                        .abilityTemplateId(abilityInstance.getTemplate().getTemplateId())
+        // Отправляем событие
+        List<AbilityCooldownDto> cooldowns = entity.getAbilities().stream()
+                .map(ability -> AbilityCooldownDto.builder()
+                        .abilityTemplateId(ability.getTemplate().getTemplateId())
+                        .turnCooldown(ability.getTurnCooldown())
+                        .cooldownEndTime(ability.getCooldownEndTime())
                         .build())
-                .toList();
-
-
+                .collect(Collectors.toList());
         CombatNextTurnEvent nextTurnEvent = CombatNextTurnEvent.builder()
                 .combatId(this.combatId)
                 .currentTurnEntityId(getCurrentTurnEntityId())
-                .currentAP(nextEntity.getCurrentAP())
-                .abilityCooldowns(currentAbilityCooldowns)
+                .currentAP(entity.getCurrentAP())
+                .abilityCooldowns(cooldowns)
                 .build();
-        this.gameSession.publishUpdate("combat_next_turn", nextTurnEvent);
+        gameSession.publishUpdate("combat_next_turn", nextTurnEvent);
 
-        if (nextEntity instanceof Monster) {
-            System.out.println("--- Turn Start: " + nextEntity.getName() + " (AI Controlled) ---");
+        if (entity instanceof Monster) {
             gameSession.getScheduler().schedule(() -> {
-                aiService.executeMonsterTurn((Monster) nextEntity, this.gameSession);
+                aiService.executeMonsterTurn((Monster) entity, this.gameSession);
             }, 1, TimeUnit.SECONDS);
         } else {
-            System.out.println("--- Turn Start: " + nextEntity.getName() + " (Player Controlled) ---");
+            System.out.println("--- Turn Start: " + entity.getName() + " (Player Controlled) - WAITING FOR ACTION ---");
         }
+    }
+
+    public void endCombatByAgreement() {
+
     }
 
     /**
      * Завершает текущий ход и запускает следующий.
      * Этот метод предполагает, что все проверки (чей ход и т.д.) уже пройдены.
      */
-    public void proceedToNextTurn() {
-        EntityTurnEndedEvent event = new EntityTurnEndedEvent(getCurrentTurnEntityId());
-        this.gameSession.publishUpdate("entity_turn_ended", event);
 
+    public void proceedToNextTurn() {
+        if (isFinished) return;
+        gameSession.publishUpdate("entity_turn_ended", getCurrentTurnEntityId());
         startNextTurn();
     }
 
@@ -221,6 +273,7 @@ public class CombatInstance implements DeathListener {
      * @param newParticipants Список новых сущностей для добавления.
      */
     public void addParticipantsToCombat(List<Entity> newParticipants) {
+        System.out.println("--- [GameSession] Adding participants to combat ---");
         initializeTeamsAndListeners(newParticipants);
 
         List<Entity> remainingInQueue = this.turnOrder.stream()
@@ -272,10 +325,18 @@ public class CombatInstance implements DeathListener {
         return null;
     }
 
+    public void printState(String contextMessage) {
+        System.out.println("\n--- COMBAT STATE (" + contextMessage + ") ---");
+        System.out.println("    Combat ID: " + this.combatId);
+        System.out.println("    Is Finished: " + this.isFinished);
+        System.out.println("    Current Turn Entity ID: " + this.getCurrentTurnEntityId());
+        System.out.println("    Turn Order (" + this.turnOrder.size() + " entities): " + this.turnOrder);
+        System.out.println("----------------------------------------\n");
+    }
+
     @Override
     public void onEntityDied(Entity e) {
-        log.info("CombatInstance: Entity {} died. Updating combat state.", e.getName());
-        this.turnOrder.remove(e.getId());
+        log.info("CombatInstance: Entity {} died.", e.getName());
         gameSession.publishUpdate("entity_died", e.getId());
 
         long remainingTeamsCount = teams.values().stream()
@@ -285,6 +346,7 @@ public class CombatInstance implements DeathListener {
         if (remainingTeamsCount <= 1) {
             endCombatForAll();
         }
+        // Больше ничего не делаем! Не трогаем очередь и не вызываем proceedToNextTurn.
     }
 
     private void endCombatForAll() {
@@ -304,6 +366,29 @@ public class CombatInstance implements DeathListener {
         this.turnOrder.clear();
     }
 
+    public boolean isEntityAlive(String entityId) {
+        Entity entity = this.teams.values().stream()
+                .flatMap(Collection::stream)
+                .filter(e -> e.getId().equals(entityId))
+                .findFirst()
+                .orElse(null);
+        if (entity == null) return false;
+        return entity.isAlive();
+    }
+
+    public void endCombatForAllByAgreement() {
+        if (this.isFinished) return;
+        this.isFinished = true;
+
+        List<Entity> allParticipants = this.teams.values().stream()
+                .flatMap(Set::stream)
+                .toList();
+
+        notifyCombatEndListeners(CombatOutcome.END_BY_AGREEMENT, null, allParticipants);
+        this.teams.clear();
+        this.turnOrder.clear();
+    }
+
     private String findWinningTeam() {
         List<String> winningTeam = teams.entrySet().stream()
                 .filter(team -> team.getValue().stream().anyMatch(Entity::isAlive))
@@ -313,5 +398,12 @@ public class CombatInstance implements DeathListener {
         if(winningTeam.size() == 1)
             return winningTeam.get(0);
         return null;
+    }
+
+    public List<Entity> getAliveEntities() {
+        return this.teams.values().stream()
+                .flatMap(Collection::stream)
+                .filter(Entity::isAlive)
+                .toList();
     }
 }
